gulp-autoprefixer added to stylus task

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -2,3 +2,9 @@
 
 global-reset()
 normalize-css()
+
+.example
+  display flex
+  transition all .5s
+  user-select none
+  background linear-gradient(to bottom, white, black)
